Fixed not working column gaps in Breeze themes

--- a/view/frontend/web/css/source/_module.less
+++ b/view/frontend/web/css/source/_module.less
@@ -3,14 +3,17 @@
 & when (@media-common = true) {
     & when (@critical = unsure), (@critical) {
         // Columns gap
+        .pagebuilder-column-group,
         .pagebuilder-column-line {
+            --gap: var(--mls-colgroup-gap);
             gap: var(--mls-colgroup-gap);
         }
         // add gap between column-lines
-        :where(.pagebuilder-column-group:has(> .pagebuilder-column-line)) {
+        .pagebuilder-column-group {
             display: flex;
+        }
+        :where(.pagebuilder-column-group:has(> .pagebuilder-column-line)) {
             flex-direction: column;
-            gap: var(--mls-colgroup-gap);
         }
 
         // small screen column modes
